src/client/components/global.scss
/* ... */
.map-music-equalizer-icon {
  // We deliberately use ems, not rems, here, so that the icon is scaled to the
  // font size of its surrounding text.
  $width: 1.25em;
  $height: 1em;
  $bars: 3;
  $duration: 1.2s;

  position: relative;
  width: $width;
  height: $height;

  & > span {
    position: absolute;
    left: 0;
    bottom: 0;
    display: inline-block;

    height: $height;
    width: calc(#{$width} / (#{$bars} + (#{$bars} - 1) / 2));
    animation-name: map-music-bar;
    animation-iteration-count: infinite;
    animation-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);

    transform-origin: bottom;
  }

  @for $i from 1 through $bars {
    & > span:nth-child(#{$i}) {
      left: calc(
        #{$width} / (#{$bars} + (#{$bars} - 1) / 2) * (#{$i} - 1) * 1.5
      );
      animation-duration: $duration - $i * 0.1s;
      animation-delay: math.div($duration, $bars) * ($i - 1);
    }
  }

  @keyframes map-music-bar {
    0%,
    100% {
      transform: scaleY(0);
    }
    50% {
      transform: scaleY(1);
    }
  }
}

.ascii-art {
  font-family: monospace;
  white-space: pre;
}

.search-match {
  background: #ff0;
  color: #000;
}

.dialog-backdrop {
  position: fixed;
  z-index: 9999;

  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
}

.dialog-modal {
  margin: 20vh auto;
  width: 60vw;
  max-height: 70vh;

  display: flex;
  flex-direction: column;

  padding: 1rem;

  background: rgba(55, 55, 55, 0.95);
  color: white;

  .dialog-title {
    font-size: 2rem;
    padding-bottom: 0.5rem;
  }

  .dialog-content {
    margin-inline: -1rem;
    padding-inline: 1rem;
    overflow: auto;
  }

  .dialog-actions {
    padding-top: 1rem;

    text-align: right;

    button {
      text-transform: uppercase;
    }

    & > *:not(:last-child) {
      margin-right: 12px;
    }
  }
}

.toolbar-container {
  // Otherwise you cannot interact with the map, even if the entire toolbar is
  // collapsed.
  pointer-events: none;

  display: flex;
  position: fixed;
  top: 0;
  height: 100%;
  margin-top: 3rem;
  align-items: flex-start;
}
.toolbar {
  pointer-events: all;

  margin-left: 1rem;
  display: flex;
  flex-direction: column;

  background: #333;
  border-radius: 5px;

  svg {
    margin: 5px;
    padding: 10px;
    cursor: pointer;
    border-radius: 999px;
    font-size: 38px;
    display: block;

    &:hover {
      background: #000000;
    }

    &.gm-only {
      background: $gmAreaColor;
    }

    &.active {
      background: #ff9900;
    }
  }
}
.toolbar-panel {
  margin: 0.5rem 0.5rem;
  padding: 0.75rem;
  background: #333;
  &:first-child {
    margin-top: 0;
  }
}
.toolbar-tools {
  pointer-events: all;

  $sidebar-width: 420px;
  width: $sidebar-width;
  overflow-y: auto;
  max-height: 100%;
}
.tab:not(.active) {
  display: none;
}
.tab-buttons {
  display: flex;
  margin-bottom: 0.2rem;
  .tab-button {
    padding: 0.1rem 0.4rem;
    margin: 0.1rem;
    background: #666;
    border-radius: 2px;

    &.active {
      background: #ff9900;
    }
  }
}

